General bug fixes

--- a/app/components/UniversalPicker/style.scss
+++ b/app/components/UniversalPicker/style.scss
@@ -40,6 +40,7 @@
         // line-height: 17px;
     }
     .buttons {
+        display: flex;
         .clear {
             color: #028cc8;
             .MuiButton-label {
