Even out tiles - fix filter

--- a/app/components/Report/DonutChart/style.scss
+++ b/app/components/Report/DonutChart/style.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/global-styles';
 .donut-chart{
+  margin-bottom: 20px;
   .chart-title{
     opacity: 0.8;
     color: #000000;
