--- a/app/components/Report/Histogram/style.scss
+++ b/app/components/Report/Histogram/style.scss
@@ -3,6 +3,7 @@
 .histogram {
   text-align: center;
   min-height: 150px;
+  margin-bottom: 8px;
   .chart-title {
     font-size: 26px;
     letter-spacing: 0;
