--- a/app/components/Report/LineChart/style.scss
+++ b/app/components/Report/LineChart/style.scss
@@ -7,5 +7,20 @@
         font-size: 12px;
         letter-spacing: 0;
         line-height: 17px;
+        position: absolute;
+        bottom: 4px;
+    }
+    .c3-axis.c3-axis-x .tick,
+    .c3-axis.c3-axis-y line
+    {
+        opacity: 0;
+        display: none;
+    }
+    .c3-axis tspan{
+        opacity: .8;
+    }
+    .c3-axis .domain 
+    {
+        opacity: .1;
     }
 }
