Move curent Line chart

--- a/app/components/Report/DetailedMultiLineChart/LineChart/style.scss
+++ b/app/components/Report/DetailedMultiLineChart/LineChart/style.scss
@@ -1,5 +1,4 @@
-@import "../../../styles/global-styles";
-.line-chart {
+.sub-chart-container .line-chart {
     .chart-label {
         opacity: 0.6;
         color: #000000;
