Move User Management under admin panel

--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -1,4 +1,4 @@
-@import '../../styles/global-styles';
+@import 'styles/global-styles';
 .user-management-page{
     padding: 24px 40px;
     .add-user-button{
