https://surgicalsafety.atlassian.net/browse/IPE-46 apply on Clear

--- a/app/components/UniversalPicker/style.scss
+++ b/app/components/UniversalPicker/style.scss
@@ -43,6 +43,7 @@
         display: flex;
         .clear {
             color: #028cc8;
+            white-space: nowrap;
             .MuiButton-label {
                 font-size: 14px;
                 letter-spacing: 0;
