https://surgicalsafety.atlassian.net/browse/IPE-50 finish trend

--- a/app/components/Report/TimeSeriesChart/style.scss
+++ b/app/components/Report/TimeSeriesChart/style.scss
@@ -87,7 +87,7 @@
     }
     svg {
         overflow: visible !important;
-    }   
+    }
     circle {
         r: 0;
         stroke: unset !important;
@@ -95,19 +95,43 @@
     .c3-line {
         stroke-width: 2px;
     }
-    .c3-axis-x.c3-axis line[y2='0'] ~ text{
+    .c3-axis-x.c3-axis line[y2="0"] ~ text {
         display: none !important;
     }
-    .regionX rect{
-        fill: #000000 ;
-        fill-opacity: .05;
+    .regionX rect {
+        fill: #000000;
+        fill-opacity: 0.05;
     }
     .extent {
-        fill: #3DB3E3 
+        fill: #3db3e3;
     }
 
-    .c3-target-NA path{
+    .c3-target-NA path {
         stroke-dasharray: 5, 5;
         stroke-width: 1px;
+    }
+    .change-value {
+        position: absolute;
+        right: 0;
+        top: 16px;
+        opacity: 0.8;
+        font-family: "Noto Sans";
+        font-size: 26px;
+        letter-spacing: 0;
+        line-height: 36px;;
+        border-radius: 4px;
+        background-color:rgba(200, 200, 200,.3);
+        &.trending-down{
+            color: #ff0000;
+            background-color: rgba(255, 125, 125,.3);
+        }
+        &.trending-up{
+            color: #009483;
+            background-color: rgba(151, 231, 179,.3);
+        }
+        span {
+            padding: 2px;
+        }
+        padding: 0 2px;
     }
 }
