--- a/app/components/Report/ChecklistDetail/style.scss
+++ b/app/components/Report/ChecklistDetail/style.scss
@@ -69,7 +69,7 @@
   text-align: right;
 }
 .checklistdetail .checklist-list{
-  padding:0 40px 40px 40px;
+  // padding:0 40px 40px 40px;
 }
 .checklistdetail .ssc-divider{
   margin: 4px 0 25px 0;
@@ -111,8 +111,8 @@
   background-color: unset;
 }
 .max-width-1{
-  max-width: 600px;
+  // max-width: 600px;
 }
 .max-width-2{
-  max-width: 692px;
+  // max-width: 692px;
 }
